--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Liquid - Trade Crypto</title>
+    <link rel="icon" href="https://fav.farm/⚡" />
+    <title>Liquid - Decentralized Exchange</title>
     <script>window.global = window;</script>
     <script type="module">
       import process from "process";
